--- a/options/train/train_HAT-S_SRx8_Patch-Mosaic.yml
+++ b/options/train/train_HAT-S_SRx8_Patch-Mosaic.yml
@@ -1,28 +1,27 @@
-# general settings
-name: train_HAT-S_SRx2_from_scratch
+name: train_HAT-S_SRx8_Patch-Mosaic
 model_type: HATModel
-scale: 2
-num_gpu: auto
+scale: 8
+num_gpu: 1
 manual_seed: 0
 
 # dataset and data loader settings
 datasets:
   train:
-    name: DF2K
+    name: DIV2K
     type: PairedImageDataset
-    dataroot_gt: datasets/DF2K/DF2K_HR_sub
-    dataroot_lq: datasets/DF2K/DF2K_bicx2_sub
-    meta_info_file: hct/data/meta_info/meta_info_DF2Ksub_GT.txt
+    dataroot_gt: datasets/DIV2K-Mosaic/DIV2K_train_HR_GTmod8
+    dataroot_lq: datasets/DIV2K-Mosaic/DIV2K_train_LR_bicubic/X8
+
     io_backend:
       type: disk
 
-    gt_size: 128
+    gt_size: 256
     use_hflip: true
     use_rot: true
 
     # data loader
     use_shuffle: true
-    num_worker_per_gpu: 6
+    num_worker_per_gpu: 2
     batch_size_per_gpu: 4
     dataset_enlarge_ratio: 1
     prefetch_mode: ~
@@ -30,32 +29,23 @@ datasets:
   val:
     name: Set5
     type: PairedImageDataset
-    dataroot_gt: datasets/Set5/GTmod2
-    dataroot_lq: datasets/Set5/LRbicx2
+    dataroot_gt: datasets/Set5/GTmod8
+    dataroot_lq: datasets/Set5/LRbicx8
     io_backend:
       type: disk
 
   val_2:
     name: Set14
     type: PairedImageDataset
-    dataroot_gt: datasets/Set14/GTmod2
-    dataroot_lq: datasets/Set14/LRbicx2
+    dataroot_gt: datasets/Set14/GTmod8
+    dataroot_lq: datasets/Set14/LRbicx8
     io_backend:
       type: disk
-
-  val_3:
-    name: Urban100
-    type: PairedImageDataset
-    dataroot_gt: datasets/urban100/GTmod2
-    dataroot_lq: datasets/urban100/LRbicx2
-    io_backend:
-      type: disk
-
 
 # network structures
 network_g:
   type: HAT
-  upscale: 2
+  upscale: 8
   in_chans: 3
   img_size: 64
   window_size: 16
@@ -74,7 +64,7 @@ network_g:
 # path
 path:
   pretrain_network_g: ~
-  strict_load_g: true
+  strict_load_g: false
   resume_state: ~
 
 # training settings
@@ -82,16 +72,16 @@ train:
   ema_decay: 0.999
   optim_g:
     type: Adam
-    lr: !!float 2e-4
+    lr: !!float 1e-4
     weight_decay: 0
     betas: [0.9, 0.99]
 
   scheduler:
     type: MultiStepLR
-    milestones: [250000, 400000, 450000, 475000]
+    milestones: [125000, 200000, 225000, 250000]
     gamma: 0.5
 
-  total_iter: 500000
+  total_iter: 250000
   warmup_iter: -1  # no warm up
 
   # losses
@@ -103,18 +93,18 @@ train:
 # validation settings
 val:
   val_freq: !!float 2e4
-  save_img: false
+  save_img: true
   pbar: False
 
   metrics:
     psnr:
       type: calculate_psnr
-      crop_border: 2
+      crop_border: 4
       test_y_channel: true
       better: higher  # the higher, the better. Default: higher
     ssim:
       type: calculate_ssim
-      crop_border: 2
+      crop_border: 4
       test_y_channel: true
       better: higher  # the higher, the better. Default: higher
 
