--- a/options/train/train_HAT-S_SRx4_L1Loss_train_on_HumanFaces.yml
+++ b/options/train/train_HAT-S_SRx4_L1Loss_train_on_HumanFaces.yml
@@ -1,17 +1,18 @@
 # general settings
-name: train_HAT_SRx4_ImageNet_from_scratch
+name: train_HAT-S_SRx4_L1Loss_train_on_HumanFaces
 model_type: HATModel
 scale: 4
-num_gpu: auto
+num_gpu: 1
 manual_seed: 0
 
 # dataset and data loader settings
 datasets:
   train:
-    name: ImageNet
-    type: ImageNetPairedDataset
-    dataroot_gt: datasets/ImageNet/GT
-    meta_info_file: hat/data/meta_info/meta_info_ImageNet_GT.txt
+    name: DIV2K
+    type: PairedImageDataset
+    dataroot_gt: datasets/Human_Faces/Human_Faces_train_HR/GTmod8
+    dataroot_lq: datasets/Human_Faces/Human_Faces_train_LR_deep_blind/X4
+
     io_backend:
       type: disk
 
@@ -21,35 +22,18 @@ datasets:
 
     # data loader
     use_shuffle: true
-    num_worker_per_gpu: 6
+    num_worker_per_gpu: 2
     batch_size_per_gpu: 4
     dataset_enlarge_ratio: 1
     prefetch_mode: ~
 
-  val_1:
-    name: Set5
+  val:
+    name: HumanFaces
     type: PairedImageDataset
-    dataroot_gt: ./datasets/Set5/GTmod4
-    dataroot_lq: ./datasets/Set5/LRbicx4
+    dataroot_gt: datasets/Human_Faces/Human_Faces_test_HR/GTmod8
+    dataroot_lq: datasets/Human_Faces/Human_Faces_test_LR_deep_blind/X4
     io_backend:
       type: disk
-
-  val_2:
-    name: Set14
-    type: PairedImageDataset
-    dataroot_gt: ./datasets/Set14/GTmod4
-    dataroot_lq: ./datasets/Set14/LRbicx4
-    io_backend:
-      type: disk
-
-  # val_3:
-  #   name: Urban100
-  #   type: PairedImageDataset
-  #   dataroot_gt: ./datasets/urban100/GTmod4
-  #   dataroot_lq: ./datasets/urban100/LRbicx4
-  #   io_backend:
-  #     type: disk
-
 
 # network structures
 network_g:
@@ -58,13 +42,13 @@ network_g:
   in_chans: 3
   img_size: 64
   window_size: 16
-  compress_ratio: 3
-  squeeze_factor: 30
+  compress_ratio: 24
+  squeeze_factor: 24
   conv_scale: 0.01
   overlap_ratio: 0.5
   img_range: 1.
   depths: [6, 6, 6, 6, 6, 6]
-  embed_dim: 180
+  embed_dim: 144
   num_heads: [6, 6, 6, 6, 6, 6]
   mlp_ratio: 2
   upsampler: 'pixelshuffle'
@@ -73,7 +57,7 @@ network_g:
 # path
 path:
   pretrain_network_g: ~
-  strict_load_g: true
+  strict_load_g: false
   resume_state: ~
 
 # training settings
@@ -81,16 +65,16 @@ train:
   ema_decay: 0.999
   optim_g:
     type: Adam
-    lr: !!float 2e-4
+    lr: !!float 1e-4
     weight_decay: 0
     betas: [0.9, 0.99]
 
   scheduler:
     type: MultiStepLR
-    milestones: [300000, 500000, 650000, 700000, 750000]
+    milestones: [125000, 200000, 225000, 250000]
     gamma: 0.5
 
-  total_iter: 800000
+  total_iter: 250000
   warmup_iter: -1  # no warm up
 
   # losses
@@ -101,8 +85,8 @@ train:
 
 # validation settings
 val:
-  val_freq: !!float 1e4
-  save_img: false
+  val_freq: !!float 2e4
+  save_img: true
   pbar: False
 
   metrics:
@@ -119,8 +103,8 @@ val:
 
 # logging settings
 logger:
-  print_freq: 100
-  save_checkpoint_freq: !!float 1e4
+  print_freq: 50
+  save_checkpoint_freq: !!float 2e4
   use_tb_logger: true
   wandb:
     project: ~
