--- a/options/train/train_HAT-S_SRx4_Patch-Mosaic.yml
+++ b/options/train/train_HAT-S_SRx4_Patch-Mosaic.yml
@@ -1,95 +1,84 @@
-# general settings
-name: train_HAT-L_SRx2_finetune_from_ImageNet_pretrain
+name: train_HAT-S_SRx4_Patch-Mosaic
 model_type: HATModel
-scale: 2
-num_gpu: auto
+scale: 4
+num_gpu: 1
 manual_seed: 0
 
 # dataset and data loader settings
 datasets:
   train:
-    name: DF2K
+    name: DIV2K
     type: PairedImageDataset
-    dataroot_gt: datasets/DF2K/DF2K_HR_sub
-    dataroot_lq: datasets/DF2K/DF2K_bicx2_sub
-    meta_info_file: hat/data/meta_info/meta_info_DF2Ksub_GT.txt
+    dataroot_gt: datasets/DIV2K-Patch-Mosaic/DIV2K_train_HR
+    dataroot_lq: datasets/DIV2K-Patch-Mosaic/DIV2K_train_LR_bicubic/X4
+
     io_backend:
       type: disk
 
-    gt_size: 128
+    gt_size: 256
     use_hflip: true
     use_rot: true
 
     # data loader
     use_shuffle: true
-    num_worker_per_gpu: 6
+    num_worker_per_gpu: 2
     batch_size_per_gpu: 4
     dataset_enlarge_ratio: 1
     prefetch_mode: ~
 
-  val_1:
+  val:
     name: Set5
     type: PairedImageDataset
-    dataroot_gt: ./datasets/Set5/GTmod2
-    dataroot_lq: ./datasets/Set5/LRbicx2
+    dataroot_gt: datasets/Set5/GTmod12
+    dataroot_lq: datasets/Set5/LRbicx4
     io_backend:
       type: disk
 
   val_2:
     name: Set14
     type: PairedImageDataset
-    dataroot_gt: ./datasets/Set14/GTmod2
-    dataroot_lq: ./datasets/Set14/LRbicx2
+    dataroot_gt: datasets/Set14/GTmod12
+    dataroot_lq: datasets/Set14/LRbicx4
     io_backend:
       type: disk
-
-  # val_3:
-  #   name: Urban100
-  #   type: PairedImageDataset
-  #   dataroot_gt: ./datasets/urban100/GTmod2
-  #   dataroot_lq: ./datasets/urban100/LRbicx2
-  #   io_backend:
-  #     type: disk
-
 
 # network structures
 network_g:
   type: HAT
-  upscale: 2
+  upscale: 4
   in_chans: 3
   img_size: 64
   window_size: 16
-  compress_ratio: 3
-  squeeze_factor: 30
+  compress_ratio: 24
+  squeeze_factor: 24
   conv_scale: 0.01
   overlap_ratio: 0.5
   img_range: 1.
-  depths: [6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6]
-  embed_dim: 180
-  num_heads: [6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6]
+  depths: [6, 6, 6, 6, 6, 6]
+  embed_dim: 144
+  num_heads: [6, 6, 6, 6, 6, 6]
   mlp_ratio: 2
   upsampler: 'pixelshuffle'
   resi_connection: '1conv'
 
 # path
 path:
-  pretrain_network_g: ./experiments/train_HAT-L_SRx2_ImageNet_from_scratch/models/net_g_latest.pth
-  param_key_g: 'params_ema'
-  strict_load_g: true
-  resume_state: ~
+  pretrain_network_g: experiments/train_HAT-S_SRx4_Patch-Mosaic/models/net_g_175000.pth
+  strict_load_g: false
+  resume_state: experiments/train_HAT-S_SRx4_Patch-Mosaic/training_states/175000.state
 
 # training settings
 train:
   ema_decay: 0.999
   optim_g:
     type: Adam
-    lr: !!float 1e-5
+    lr: !!float 1e-4
     weight_decay: 0
     betas: [0.9, 0.99]
 
   scheduler:
     type: MultiStepLR
-    milestones: [125000, 200000, 225000, 240000]
+    milestones: [156250, 250000, 281250, 312500]
     gamma: 0.5
 
   total_iter: 250000
@@ -104,25 +93,25 @@ train:
 # validation settings
 val:
   val_freq: !!float 5e3
-  save_img: false
+  save_img: true
   pbar: False
 
   metrics:
     psnr:
       type: calculate_psnr
-      crop_border: 2
+      crop_border: 4
       test_y_channel: true
       better: higher  # the higher, the better. Default: higher
     ssim:
       type: calculate_ssim
-      crop_border: 2
+      crop_border: 4
       test_y_channel: true
       better: higher  # the higher, the better. Default: higher
 
 # logging settings
 logger:
   print_freq: 100
-  save_checkpoint_freq: !!float 5e3
+  save_checkpoint_freq: !!float 25e3
   use_tb_logger: true
   wandb:
     project: ~
