--- a/options/train/train_HAT-S_SRx4_PerceptualLoss.yml
+++ b/options/train/train_HAT-S_SRx4_PerceptualLoss.yml
@@ -1,18 +1,18 @@
 # general settings
-name: train_HAT-S_SRx4_finetune_from_SRx2
+name: train_HAT-S_SRx4_PerceptualLoss
 model_type: HATModel
 scale: 4
-num_gpu: auto
+num_gpu: 1
 manual_seed: 0
 
 # dataset and data loader settings
 datasets:
   train:
-    name: DF2K
+    name: DIV2K
     type: PairedImageDataset
-    dataroot_gt: datasets/DF2K/DF2K_HR_sub
-    dataroot_lq: datasets/DF2K/DF2K_bicx4_sub
-    meta_info_file: hct/data/meta_info/meta_info_DF2Ksub_GT.txt
+    dataroot_gt: datasets/DIV2K-X8/DIV2K_train_HR
+    dataroot_lq: datasets/DIV2K-X8/DIV2K_train_LR_bicubic/X4
+
     io_backend:
       type: disk
 
@@ -30,7 +30,7 @@ datasets:
   val:
     name: Set5
     type: PairedImageDataset
-    dataroot_gt: datasets/Set5/GTmod4
+    dataroot_gt: datasets/Set5/GTmod12
     dataroot_lq: datasets/Set5/LRbicx4
     io_backend:
       type: disk
@@ -38,19 +38,10 @@ datasets:
   val_2:
     name: Set14
     type: PairedImageDataset
-    dataroot_gt: datasets/Set14/GTmod4
+    dataroot_gt: datasets/Set14/GTmod12
     dataroot_lq: datasets/Set14/LRbicx4
     io_backend:
       type: disk
-
-  val_3:
-    name: Urban100
-    type: PairedImageDataset
-    dataroot_gt: datasets/urban100/GTmod4
-    dataroot_lq: datasets/urban100/LRbicx4
-    io_backend:
-      type: disk
-
 
 # network structures
 network_g:
@@ -73,9 +64,9 @@ network_g:
 
 # path
 path:
-  pretrain_network_g: ./experiments/563_train_HAT-S_SRx2_scratch_DF2K_500k_B4G8/models/net_g_latest.pth
+  pretrain_network_g: /home/hieu/data1t/FPT/HAT/experiments/train_HAT-S_SRx4_PerceptualLoss/models/net_g_160000.pth
   strict_load_g: false
-  resume_state: ~
+  resume_state: experiments/train_HAT-S_SRx4_PerceptualLoss/training_states/160000.state
 
 # training settings
 train:
@@ -88,22 +79,21 @@ train:
 
   scheduler:
     type: MultiStepLR
-    milestones: [125000, 200000, 225000, 240000]
+    milestones: [125000, 200000, 225000, 250000]
     gamma: 0.5
 
   total_iter: 250000
   warmup_iter: -1  # no warm up
 
   # losses
-  pixel_opt:
-    type: L1Loss
-    loss_weight: 1.0
-    reduction: mean
+  perceptual_opt:
+    type: PerceptualLoss
+    layer_weights: {'conv2_2': 1.}
 
 # validation settings
 val:
-  val_freq: !!float 2e4
-  save_img: false
+  val_freq: !!float 5e3
+  save_img: true
   pbar: False
 
   metrics:
