--- a/options/train/train_HAT-S_SRx4_PerceptualLoss_conv2_1.yml
+++ b/options/train/train_HAT-S_SRx4_PerceptualLoss_conv2_1.yml
@@ -1,22 +1,22 @@
 # general settings
-name: train_HAT-S_SRx3_from_scratch
+name: train_HAT-S_SRx4_PerceptualLoss_conv2_1
 model_type: HATModel
-scale: 3
-num_gpu: auto
+scale: 4
+num_gpu: 1
 manual_seed: 0
 
 # dataset and data loader settings
 datasets:
   train:
-    name: DF2K
+    name: DIV2K
     type: PairedImageDataset
-    dataroot_gt: datasets/DF2K/DF2K_HR_sub
-    dataroot_lq: datasets/DF2K/DF2K_bicx3_sub
-    meta_info_file: hct/data/meta_info/meta_info_DF2Ksub_GT.txt
+    dataroot_gt: datasets/DIV2K-X8/DIV2K_train_HR
+    dataroot_lq: datasets/DIV2K-X8/DIV2K_train_LR_bicubic/X4
+
     io_backend:
       type: disk
 
-    gt_size: 192
+    gt_size: 256
     use_hflip: true
     use_rot: true
 
@@ -30,32 +30,23 @@ datasets:
   val:
     name: Set5
     type: PairedImageDataset
-    dataroot_gt: datasets/Set5/GTmod3
-    dataroot_lq: datasets/Set5/LRbicx3
+    dataroot_gt: datasets/Set5/GTmod12
+    dataroot_lq: datasets/Set5/LRbicx4
     io_backend:
       type: disk
 
   val_2:
     name: Set14
     type: PairedImageDataset
-    dataroot_gt: datasets/Set14/GTmod3
-    dataroot_lq: datasets/Set14/LRbicx3
+    dataroot_gt: datasets/Set14/GTmod12
+    dataroot_lq: datasets/Set14/LRbicx4
     io_backend:
       type: disk
-
-  val_3:
-    name: Urban100
-    type: PairedImageDataset
-    dataroot_gt: datasets/urban100/GTmod3
-    dataroot_lq: datasets/urban100/LRbicx3
-    io_backend:
-      type: disk
-
 
 # network structures
 network_g:
   type: HAT
-  upscale: 3
+  upscale: 4
   in_chans: 3
   img_size: 64
   window_size: 16
@@ -73,48 +64,47 @@ network_g:
 
 # path
 path:
-  pretrain_network_g: ~
-  strict_load_g: true
-  resume_state: ~
+  pretrain_network_g: experiments/train_HAT-S_SRx4_PerceptualLoss_conv2_1/models/net_g_100000.pth
+  strict_load_g: false
+  resume_state: experiments/train_HAT-S_SRx4_PerceptualLoss_conv2_1/training_states/100000.state
 
 # training settings
 train:
   ema_decay: 0.999
   optim_g:
     type: Adam
-    lr: !!float 2e-4
+    lr: !!float 1e-4
     weight_decay: 0
     betas: [0.9, 0.99]
 
   scheduler:
     type: MultiStepLR
-    milestones: [250000, 400000, 450000, 475000]
+    milestones: [125000, 200000, 225000, 250000]
     gamma: 0.5
 
-  total_iter: 500000
+  total_iter: 160000
   warmup_iter: -1  # no warm up
 
   # losses
-  pixel_opt:
-    type: L1Loss
-    loss_weight: 1.0
-    reduction: mean
+  perceptual_opt:
+    type: PerceptualLoss
+    layer_weights: {'conv2_1': 1.}
 
 # validation settings
 val:
-  val_freq: !!float 2e4
-  save_img: false
+  val_freq: !!float 5e3
+  save_img: true
   pbar: False
 
   metrics:
     psnr:
       type: calculate_psnr
-      crop_border: 3
+      crop_border: 4
       test_y_channel: true
       better: higher  # the higher, the better. Default: higher
     ssim:
       type: calculate_ssim
-      crop_border: 3
+      crop_border: 4
       test_y_channel: true
       better: higher  # the higher, the better. Default: higher
 
