--- a/options/train/train_HAT-S_SRx4_PerceptualLoss_conv3_2.yml
+++ b/options/train/train_HAT-S_SRx4_PerceptualLoss_conv3_2.yml
@@ -1,21 +1,22 @@
 # general settings
-name: train_HAT_SRx2_ImageNet_from_scratch
+name: train_HAT-S_SRx4_PerceptualLoss_conv3_2
 model_type: HATModel
-scale: 2
-num_gpu: auto
+scale: 4
+num_gpu: 1
 manual_seed: 0
 
 # dataset and data loader settings
 datasets:
   train:
-    name: ImageNet
-    type: ImageNetPairedDataset
-    dataroot_gt: datasets/ImageNet/GT
-    meta_info_file: hat/data/meta_info/meta_info_ImageNet_GT.txt
+    name: DIV2K
+    type: PairedImageDataset
+    dataroot_gt: datasets/DIV2K-X8/DIV2K_train_HR
+    dataroot_lq: datasets/DIV2K-X8/DIV2K_train_LR_bicubic/X4
+
     io_backend:
       type: disk
 
-    gt_size: 128
+    gt_size: 256
     use_hflip: true
     use_rot: true
 
@@ -26,45 +27,36 @@ datasets:
     dataset_enlarge_ratio: 1
     prefetch_mode: ~
 
-  val_1:
+  val:
     name: Set5
     type: PairedImageDataset
-    dataroot_gt: ./datasets/Set5/GTmod2
-    dataroot_lq: ./datasets/Set5/LRbicx2
+    dataroot_gt: datasets/Set5/GTmod12
+    dataroot_lq: datasets/Set5/LRbicx4
     io_backend:
       type: disk
 
   val_2:
     name: Set14
     type: PairedImageDataset
-    dataroot_gt: ./datasets/Set14/GTmod2
-    dataroot_lq: ./datasets/Set14/LRbicx2
+    dataroot_gt: datasets/Set14/GTmod12
+    dataroot_lq: datasets/Set14/LRbicx4
     io_backend:
       type: disk
-
-  # val_3:
-  #   name: Urban100
-  #   type: PairedImageDataset
-  #   dataroot_gt: ./datasets/urban100/GTmod2
-  #   dataroot_lq: ./datasets/urban100/LRbicx2
-  #   io_backend:
-  #     type: disk
-
 
 # network structures
 network_g:
   type: HAT
-  upscale: 2
+  upscale: 4
   in_chans: 3
   img_size: 64
   window_size: 16
-  compress_ratio: 3
-  squeeze_factor: 30
+  compress_ratio: 24
+  squeeze_factor: 24
   conv_scale: 0.01
   overlap_ratio: 0.5
   img_range: 1.
   depths: [6, 6, 6, 6, 6, 6]
-  embed_dim: 180
+  embed_dim: 144
   num_heads: [6, 6, 6, 6, 6, 6]
   mlp_ratio: 2
   upsampler: 'pixelshuffle'
@@ -72,55 +64,55 @@ network_g:
 
 # path
 path:
-  pretrain_network_g: ~
-  strict_load_g: true
-  resume_state: ~
+  pretrain_network_g: experiments/train_HAT-S_SRx4_PerceptualLoss_conv3_2/models/net_g_100000.pth
+  strict_load_g: false
+  resume_state: experiments/train_HAT-S_SRx4_PerceptualLoss_conv3_2/training_states/100000.state
 
 # training settings
 train:
   ema_decay: 0.999
   optim_g:
+  optim_g:
     type: Adam
-    lr: !!float 2e-4
+    lr: !!float 1e-4
     weight_decay: 0
     betas: [0.9, 0.99]
 
   scheduler:
     type: MultiStepLR
-    milestones: [300000, 500000, 650000, 700000, 750000]
+    milestones: [125000, 200000, 225000, 250000]
     gamma: 0.5
 
-  total_iter: 800000
+  total_iter: 160000
   warmup_iter: -1  # no warm up
 
   # losses
-  pixel_opt:
-    type: L1Loss
-    loss_weight: 1.0
-    reduction: mean
+  perceptual_opt:
+    type: PerceptualLoss
+    layer_weights: {'conv3_2': 1.}
 
 # validation settings
 val:
-  val_freq: !!float 1e4
-  save_img: false
+  val_freq: !!float 5e3
+  save_img: true
   pbar: False
 
   metrics:
     psnr:
       type: calculate_psnr
-      crop_border: 2
+      crop_border: 4
       test_y_channel: true
       better: higher  # the higher, the better. Default: higher
     ssim:
       type: calculate_ssim
-      crop_border: 2
+      crop_border: 4
       test_y_channel: true
       better: higher  # the higher, the better. Default: higher
 
 # logging settings
 logger:
   print_freq: 100
-  save_checkpoint_freq: !!float 1e4
+  save_checkpoint_freq: !!float 2e4
   use_tb_logger: true
   wandb:
     project: ~
