--- a/options/train/train_HAT-S_SRx4_finetune_from_DIV2K_pretrain.yml
+++ b/options/train/train_HAT-S_SRx4_finetune_from_DIV2K_pretrain.yml
@@ -1,17 +1,18 @@
 # general settings
-name: train_HAT-L_SRx4_ImageNet_from_scratch
+name: train_HAT-S_SRx4_finetune_from_DIV2K_pretrain
 model_type: HATModel
 scale: 4
-num_gpu: auto
+num_gpu: 1
 manual_seed: 0
 
 # dataset and data loader settings
 datasets:
   train:
-    name: ImageNet
-    type: ImageNetPairedDataset
-    dataroot_gt: datasets/ImageNet/GT
-    meta_info_file: hat/data/meta_info/meta_info_ImageNet_GT.txt
+    name: DIV2K
+    type: PairedImageDataset
+    dataroot_gt: datasets/Vietnamese_Landscape/Vietnamese_Landscape_train_HR/GTmod8
+    dataroot_lq: datasets/Vietnamese_Landscape/Vietnamese_Landscape_train_LR/LRbicx4
+
     io_backend:
       type: disk
 
@@ -26,30 +27,13 @@ datasets:
     dataset_enlarge_ratio: 1
     prefetch_mode: ~
 
-  val_1:
-    name: Set5
+  val:
+    name: VietnameseLandscape
     type: PairedImageDataset
-    dataroot_gt: ./datasets/Set5/GTmod4
-    dataroot_lq: ./datasets/Set5/LRbicx4
+    dataroot_gt: datasets/Vietnamese_Landscape/Vietnamese_Landscape_test_HR/GTmod8
+    dataroot_lq: datasets/Vietnamese_Landscape/Vietnamese_Landscape_test_LR/LRbicx4
     io_backend:
       type: disk
-
-  val_2:
-    name: Set14
-    type: PairedImageDataset
-    dataroot_gt: ./datasets/Set14/GTmod4
-    dataroot_lq: ./datasets/Set14/LRbicx4
-    io_backend:
-      type: disk
-
-  # val_3:
-  #   name: Urban100
-  #   type: PairedImageDataset
-  #   dataroot_gt: ./datasets/urban100/GTmod4
-  #   dataroot_lq: ./datasets/urban100/LRbicx4
-  #   io_backend:
-  #     type: disk
-
 
 # network structures
 network_g:
@@ -58,22 +42,22 @@ network_g:
   in_chans: 3
   img_size: 64
   window_size: 16
-  compress_ratio: 3
-  squeeze_factor: 30
+  compress_ratio: 24
+  squeeze_factor: 24
   conv_scale: 0.01
   overlap_ratio: 0.5
   img_range: 1.
-  depths: [6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6]
-  embed_dim: 180
-  num_heads: [6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6]
+  depths: [6, 6, 6, 6, 6, 6]
+  embed_dim: 144
+  num_heads: [6, 6, 6, 6, 6, 6]
   mlp_ratio: 2
   upsampler: 'pixelshuffle'
   resi_connection: '1conv'
 
 # path
 path:
-  pretrain_network_g: ~
-  strict_load_g: true
+  pretrain_network_g: experiments/train_HAT-S_SRx4_from_scratch/models/net_g_latest.pth
+  strict_load_g: false
   resume_state: ~
 
 # training settings
@@ -81,16 +65,16 @@ train:
   ema_decay: 0.999
   optim_g:
     type: Adam
-    lr: !!float 2e-4
+    lr: !!float 1e-4
     weight_decay: 0
     betas: [0.9, 0.99]
 
   scheduler:
     type: MultiStepLR
-    milestones: [300000, 500000, 650000, 700000, 750000]
+    milestones: [125000, 200000, 225000, 250000]
     gamma: 0.5
 
-  total_iter: 800000
+  total_iter: 250000
   warmup_iter: -1  # no warm up
 
   # losses
@@ -101,8 +85,8 @@ train:
 
 # validation settings
 val:
-  val_freq: !!float 1e4
-  save_img: false
+  val_freq: !!float 2e4
+  save_img: False
   pbar: False
 
   metrics:
@@ -120,7 +104,7 @@ val:
 # logging settings
 logger:
   print_freq: 100
-  save_checkpoint_freq: !!float 1e4
+  save_checkpoint_freq: !!float 2e4
   use_tb_logger: true
   wandb:
     project: ~
