--- a/options/test/HAT-S_SRx4_Patch-Mosaic.yml
+++ b/options/test/HAT-S_SRx4_Patch-Mosaic.yml
@@ -1,6 +1,6 @@
-name: HAT-S_SRx2
+name: HAT-S_SRx4_Patch-Mosaic
 model_type: HATModel
-scale: 2
+scale: 4
 num_gpu: 1  # set num_gpu: 0 for cpu mode
 manual_seed: 0
 
@@ -8,47 +8,23 @@ datasets:
   test_1:  # the 1st test dataset
     name: Set5
     type: PairedImageDataset
-    dataroot_gt: ./datasets/Set5/GTmod2
-    dataroot_lq: ./datasets/Set5/LRbicx2
+    dataroot_gt: ./datasets/Set5/GTmod12
+    dataroot_lq: ./datasets/Set5/LRbicx4
     io_backend:
       type: disk
 
   test_2:  # the 2nd test dataset
     name: Set14
     type: PairedImageDataset
-    dataroot_gt: ./datasets/Set14/GTmod2
-    dataroot_lq: ./datasets/Set14/LRbicx2
+    dataroot_gt: ./datasets/Set14/GTmod12
+    dataroot_lq: ./datasets/Set14/LRbicx4
     io_backend:
       type: disk
-
-  test_3:
-    name: Urban100
-    type: PairedImageDataset
-    dataroot_gt: ./datasets/urban100/GTmod2
-    dataroot_lq: ./datasets/urban100/LRbicx2
-    io_backend:
-      type: disk
-
-  test_4:
-     name: BSDS100
-     type: PairedImageDataset
-     dataroot_gt: ./datasets/BSDS100/GTmod2
-     dataroot_lq: ./datasets/BSDS100/LRbicx2
-     io_backend:
-       type: disk
-
-  test_5:
-      name: Manga109
-      type: PairedImageDataset
-      dataroot_gt: ./datasets/manga109/GTmod2
-      dataroot_lq: ./datasets/manga109/LRbicx2
-      io_backend:
-        type: disk
 
 # network structures
 network_g:
   type: HAT
-  upscale: 2
+  upscale: 4
   in_chans: 3
   img_size: 64
   window_size: 16
@@ -67,7 +43,7 @@ network_g:
 
 # path
 path:
-  pretrain_network_g: ./experiments/pretrained_models/HAT-S_SRx2.pth
+  pretrain_network_g: ./experiments/pretrained_models/HAT-S_SRx4_Patch-Mosaic.pth
   strict_load_g: true
   param_key_g: 'params_ema'
 
@@ -79,9 +55,9 @@ val:
   metrics:
     psnr: # metric name, can be arbitrary
       type: calculate_psnr
-      crop_border: 2
+      crop_border: 4
       test_y_channel: true
     ssim:
       type: calculate_ssim
-      crop_border: 2
+      crop_border: 4
       test_y_channel: true
