upload some models and update YAML options

--- a/deploy/options/HAT-S_SRx4.yml
+++ b/deploy/options/HAT-S_SRx4.yml
@@ -1,4 +1,4 @@
-name: HAT-S_SRx4_from_scratch
+name: HAT-S_SRx4
 model_type: HATModel
 scale: 4
 num_gpu: 1
@@ -25,6 +25,6 @@ network_g:
   resi_connection: '1conv'
 
 path:
-  pretrain_network_g: E:\HAT-main\deploy\pretrained_models\HAT-S_SRx4.pth
+  pretrain_network_g: pretrained_models\HAT-S_SRx4.pth
   strict_load_g: true
   param_key_g: 'params_ema'
