--- a/deploy/options/HAT-S_SRx4_Patch-Mosaic.yml
+++ b/deploy/options/HAT-S_SRx4_Patch-Mosaic.yml
@@ -28,5 +28,5 @@ network_g:
 
 # path
 path:
-  pretrain_network_g: E:\HAT-main\deploy\pretrained_models\HAT-S_SRx4_Patch-Mosaic.pth
+  pretrain_network_g: pretrained_models\HAT-S_SRx4_Patch-Mosaic.pth
   strict_load_g: false
