--- a/options/test/HAT-S_SRx4_Patch-Mosaic.yml
+++ b/options/test/HAT-S_SRx4_Patch-Mosaic.yml
@@ -20,6 +20,22 @@ datasets:
     dataroot_lq: ./datasets/Set14/LRbicx4
     io_backend:
       type: disk
+      
+  test_3:  # the 3nd test dataset
+    name: BSD100
+    type: PairedImageDataset
+    dataroot_gt: ./datasets/BSD100/GTmod8
+    dataroot_lq: ./datasets/BSD100/LRbicx4
+    io_backend:
+      type: disk
+  
+  test_4:  # the 4nd test dataset
+    name: Manga109
+    type: PairedImageDataset
+    dataroot_gt: ./datasets/Manga109/GTmod8
+    dataroot_lq: ./datasets/Manga109/LRbicx4
+    io_backend:
+      type: disk
 
 # network structures
 network_g:
@@ -43,7 +59,7 @@ network_g:
 
 # path
 path:
-  pretrain_network_g: ./experiments/pretrained_models/HAT-S_SRx4_Patch-Mosaic.pth
+  pretrain_network_g: ./deploy/pretrained_models/HAT-S_SRx4_Patch-Mosaic.pth
   strict_load_g: true
   param_key_g: 'params_ema'
 
