--- a/deploy/options/HAT-S_SRx4.yml
+++ b/deploy/options/HAT-S_SRx4.yml
@@ -25,6 +25,6 @@ network_g:
   resi_connection: '1conv'
 
 path:
-  pretrain_network_g: pretrained_models\HAT-S_SRx4.pth
+  pretrain_network_g: pretrained_models/HAT-S_SRx4.pth
   strict_load_g: true
   param_key_g: 'params_ema'
