--- a/options/test/HAT-S_SRx8_Patch-Mosaic.yml
+++ b/options/test/HAT-S_SRx8_Patch-Mosaic.yml
@@ -1,6 +1,6 @@
-name: HAT-S_SRx4_from_scratch
+name: HAT-S_SRx8_Patch-Mosaic
 model_type: HATModel
-scale: 4
+scale: 8
 num_gpu: 1  # set num_gpu: 0 for cpu mode
 manual_seed: 0
 
@@ -8,24 +8,24 @@ datasets:
   test_1:  # the 1st test dataset
     name: Set5
     type: PairedImageDataset
-    dataroot_gt: ./datasets/Set5/GTmod12
-    dataroot_lq: ./datasets/Set5/LRbicx4
+    dataroot_gt: ./datasets/Set5/GTmod8
+    dataroot_lq: ./datasets/Set5/LRbicx8
     io_backend:
       type: disk
 
   test_2:  # the 2nd test dataset
     name: Set14
     type: PairedImageDataset
-    dataroot_gt: ./datasets/Set14/GTmod12
-    dataroot_lq: ./datasets/Set14/LRbicx4
+    dataroot_gt: ./datasets/Set14/GTmod8
+    dataroot_lq: ./datasets/Set14/LRbicx8
     io_backend:
       type: disk
-    
+
   test_3:  # the 3nd test dataset
     name: BSD100
     type: PairedImageDataset
     dataroot_gt: ./datasets/BSD100/GTmod8
-    dataroot_lq: ./datasets/BSD100/LRbicx4
+    dataroot_lq: ./datasets/BSD100/LRbicx8
     io_backend:
       type: disk
   
@@ -33,14 +33,14 @@ datasets:
     name: Manga109
     type: PairedImageDataset
     dataroot_gt: ./datasets/Manga109/GTmod8
-    dataroot_lq: ./datasets/Manga109/LRbicx4
+    dataroot_lq: ./datasets/Manga109/LRbicx8
     io_backend:
       type: disk
 
 # network structures
 network_g:
   type: HAT
-  upscale: 4
+  upscale: 8
   in_chans: 3
   img_size: 64
   window_size: 16
@@ -59,7 +59,7 @@ network_g:
 
 # path
 path:
-  pretrain_network_g: ./deploy/pretrained_models/HAT-S_SRx4_from_scratch.pth
+  pretrain_network_g: ./deploy/pretrained_models/HAT-S_SRx8_Patch-Mosaic.pth
   strict_load_g: true
   param_key_g: 'params_ema'
 
