--- a/options/test/HAT-S_SRx8_PerceptualLoss_conv2_2.yml
+++ b/options/test/HAT-S_SRx8_PerceptualLoss_conv2_2.yml
@@ -21,6 +21,22 @@ datasets:
     io_backend:
       type: disk
 
+  test_3:  # the 3nd test dataset
+    name: BSD100
+    type: PairedImageDataset
+    dataroot_gt: ./datasets/BSD100/GTmod8
+    dataroot_lq: ./datasets/BSD100/LRbicx8
+    io_backend:
+      type: disk
+  
+  test_4:  # the 4nd test dataset
+    name: Manga109
+    type: PairedImageDataset
+    dataroot_gt: ./datasets/Manga109/GTmod8
+    dataroot_lq: ./datasets/Manga109/LRbicx8
+    io_backend:
+      type: disk
+
 # network structures
 network_g:
   type: HAT
@@ -43,7 +59,7 @@ network_g:
 
 # path
 path:
-  pretrain_network_g: ./experiments/pretrained_models/HAT-S_SRx8_PerceptualLoss_conv2_2.pth
+  pretrain_network_g: ./deploy/pretrained_models/HAT-S_SRx8_PerceptualLoss_conv2_2.pth
   strict_load_g: true
   param_key_g: 'params_ema'
 
