--- a/options/train/train_HAT-S_SRx4_Patch-Mosaic.yml
+++ b/options/train/train_HAT-S_SRx4_Patch-Mosaic.yml
@@ -63,9 +63,9 @@ network_g:
 
 # path
 path:
-  pretrain_network_g: experiments/train_HAT-S_SRx4_Patch-Mosaic/models/net_g_175000.pth
+  pretrain_network_g: ~
   strict_load_g: false
-  resume_state: experiments/train_HAT-S_SRx4_Patch-Mosaic/training_states/175000.state
+  resume_state: ~
 
 # training settings
 train:
