--- a/options/train/train_HAT-S_SRx4_PerceptualLoss_conv3_2.yml
+++ b/options/train/train_HAT-S_SRx4_PerceptualLoss_conv3_2.yml
@@ -64,9 +64,9 @@ network_g:
 
 # path
 path:
-  pretrain_network_g: experiments/train_HAT-S_SRx4_PerceptualLoss_conv3_2/models/net_g_100000.pth
+  pretrain_network_g: ~
   strict_load_g: false
-  resume_state: experiments/train_HAT-S_SRx4_PerceptualLoss_conv3_2/training_states/100000.state
+  resume_state: ~
 
 # training settings
 train:
