--- a/options/train/train_HAT-S_SRx8_MixLosses.yml
+++ b/options/train/train_HAT-S_SRx8_MixLosses.yml
@@ -64,9 +64,9 @@ network_g:
 
 # path
 path:
-  pretrain_network_g: experiments/train_HAT-S_SRx8_MixLosses/models/net_g_40000.pth
+  pretrain_network_g: ~
   strict_load_g: false
-  resume_state: experiments/train_HAT-S_SRx8_MixLosses/training_states/40000.state
+  resume_state: ~
 
 # training settings
 train:
